fix gap px value of links

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -54,5 +54,5 @@ ul {
   list-style-type: none;
   display: flex;
   margin-right: auto;
-  gap: 12px;
+  gap: 16px;
 }
